[package]
name = "resource-manager-allocate"
version = "0.1.0"
authors = ["Tomas Olvecky <tomas.olvecky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.22"
tracing-appender = "0.1.1"
tracing-subscriber = "0.2.15"
tracing-timing = "0.4.3"
quanta = "0.6.5"
anyhow = "1.0.35"
serde_json = "1.0.60"
